# MonPanierLocal

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  EXPLOITATION_COMPLETE.md  FIXES_APPLIED.md  README.md  REGISTRATION_FIX.md  start.sh
backend/: .dockerignore  .flake8  CHANGELOG_OPTIMIZATIONS.md  Dockerfile.prod  OPTIMIZATIONS.md  TEST_RESULTS.md  entrypoint.sh  pyproject.toml  requirements-test.txt  requirements.txt  test_startup.py
backend/apps/auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/auth/migrations/: 0001_initial.py
backend/apps/producers/: admin.py  apps.py  cache.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/apps/producers/management/commands/: add_10_complete_producers.py  add_complete_producer.py  add_photos_to_producers_and_products.py  add_sample_producers.py
backend/apps/producers/migrations/: 0001_initial.py  0002_producerprofile_email_contact_and_more.py  0003_alter_producerprofile_category_and_more.py
backend/apps/products/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_add_category_and_photos.py  0003_create_initial_categories.py  0004_rename_products_pr_category_created_idx_products_pr_categor_905dc3_idx_and_more.py
backend/config/: asgi.py  exceptions.py  health.py  settings.py  throttling.py  urls.py  wsgi.py
backend/tests/: README.md  conftest.py  test_auth_api.py  test_photos_api.py  test_producers_api.py  test_products_api.py
docs/: PRODUCTION.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: CategoryIcon.tsx  Toast.tsx  (+22 more)
infra/: docker-compose.prod.yml
selenium_tests/: AUTH_TEST_RESULTS.md  SCENARIO_COMPLET.md  base_test.py  conftest.py  report.html  requirements.txt  run_tests.sh  test_01_navigation.py  test_02_authentication.py  test_03_homepage_map.py  test_04_search.py  test_05_producer_detail.py  test_06_profile.py  test_07_api_integration.py  test_08_forms.py  test_09_sidebar.py  test_10_producer_edit.py  test_11_product_management.py  test_12_sale_modes.py  test_13_photo_management.py  test_14_address_geocoding.py  test_15_responsive_accessibility.py  test_auth_complete_flow.py  test_auth_detailed.py  test_scenario_complet.py
(+17 files in other folders)
