[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monpanierlocal"
version = "1.0.0"
description = "Application web pour découvrir et contacter les producteurs locaux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Mon Panier Local Team"}
]
keywords = ["django", "rest-api", "local-producers", "agriculture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.0.1,<6.0",
    "djangorestframework>=3.14.0,<4.0",
    "djangorestframework-simplejwt>=5.3.1,<6.0",
    "django-cors-headers>=4.3.1,<5.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "Pillow>=10.2.0,<11.0",
    "python-dotenv>=1.0.0,<2.0",
    "django-filter>=23.5,<24.0",
    "gunicorn>=21.2.0,<22.0",
    "whitenoise>=6.6.0,<7.0",
    "requests>=2.31.0,<3.0",
    "django-redis>=5.4.0,<6.0",
    "redis>=5.0.1,<6.0",
    "hiredis>=2.3.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "django-stubs>=4.2.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["migrations", "venv", ".venv", "__pycache__"]
skips = ["B101"]  # Skip assert_used check




